test/valid/switch.js
switch (3) {
case 0: 'a';
case 1: 'b';
defualt: null;
}

