test/invalid/switch-1.js
switch (3) {
case 'a': 'a';
case 'b': 'b';
defualt: null;
}

